--- a/Assets/Scripts/Features/Currency/Render/OLS.Currency.Render.asmdef
+++ b/Assets/Scripts/Features/Currency/Render/OLS.Currency.Render.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "OLS.CoreServices.Render",
+    "name": "OLS.Currency.Render",
     "rootNamespace": "OLS",
     "references": [
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
