Added IdleBlock events and systems (buy, currency change, upgrade)

--- a/Assets/Scripts/Features/IdleBlock/Game/OLS.IdleBlock.Game.asmdef
+++ b/Assets/Scripts/Features/IdleBlock/Game/OLS.IdleBlock.Game.asmdef
@@ -7,7 +7,9 @@
         "GUID:e59bf9fc7d5a44b18a819a92edd46163",
         "GUID:ed363a4bee7756e4895ea524559b0b21",
         "GUID:492aa8c4cb4aa7141baef950f8c68b7d",
-        "GUID:821a5f75be1ff7047aa885de4cd10d00"
+        "GUID:821a5f75be1ff7047aa885de4cd10d00",
+        "GUID:979e31b5dac61f642bd98f6c1c197a24",
+        "GUID:57ab2f2dcd3833345850dfd4b210caf3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
